--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "recoil": "^0.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
