--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.26.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "recoil": "^0.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
